# apache_arrow_utils

./: 1.md  1.txt  C70_Control.hmf.arrow  C70_Control.hmfa.ipc  C70_Control.hmfa.parquet  CONFIG.utca.parquet  Cargo.toml  Lunaria rediviva.2024-01-24.1.1.0.utca.ipc  MatureMilk.hmfa.arrow  MatureMilk.json  MatureMilkFat.arrow  MatureMilkFat.hmfa.arrow  OUTPUT.parquet  TEMP.adoc  TEMP.md  file.parquet  output.hmfa.2.arrow  output.hmfa.arrow  output.hmfa.parquet  taplo.toml
_data/2025.Acers/: 1.Clean.md  1.md  Acer Ginnala.2025-07-08.0.0.1.utca.parquet  Acer Rubrum.2025-07-09.0.0.3.utca.parquet  Acer Ukurunduense.2025-07-08.0.0.3.utca.parquet  AcerGinnala.2025-07-08.0.0.3.utca.parquet  (+10 more)
_output/: Acer Ginnala.2025-07-08.0.0.1.utca.parquet  Acer Ginnala.2025-07-08.0.0.2.utca.parquet  Acer Ginnala.2025-07-08.0.0.3.utca.parquet  Acer Pensylvanicum.2025-07-08.0.0.1.utca.parquet  Acer Pensylvanicum.2025-07-08.0.0.2.utca.parquet  Acer Pensylvanicum.2025-07-08.0.0.3.utca.parquet  Acer Rubrum.2025-07-09.0.0.1.utca.parquet  Acer Rubrum.2025-07-09.0.0.2.utca.parquet  Acer Rubrum.2025-07-09.0.0.3.utca.parquet  Acer Spicatum.2025-07-09.0.0.1.utca.parquet  Acer Spicatum.2025-07-09.0.0.2.utca.parquet  Acer Spicatum.2025-07-09.0.0.3.utca.parquet  Acer Ukurunduense.2025-07-08.0.0.1.utca.parquet  Acer Ukurunduense.2025-07-08.0.0.2.utca.parquet  Acer Ukurunduense.2025-07-08.0.0.3.utca.parquet  C108-N.2025-04-23.0.0.2.utca.parquet  Euonymus Alatus.2014-06-19.utca.parquet  Euonymus Bungeanus.2014-06-19.utca.parquet  Euonymus Europaeus.2014-06-19.utca.parquet  Euonymus Hamiltonianus.2014-06-19.utca.parquet  Euonymus Latifolius.2014-06-19.utca.parquet  Euonymus Macropterus.2014-06-19.utca.parquet  Euonymus Maximowiczianus.2014-06-19.utca.parquet  Euonymus Pauciflorus.2014-06-19.utca.parquet  Euonymus Phellomanus.2014-06-19.utca.parquet  Euonymus Sachalinensis.2014-06-19.utca.parquet  Euonymus Sacrosanctus.2014-06-19.utca.parquet  Euonymus Semiexsertus.2014-06-19.utca.parquet  Euonymus Sieboldianus.2014-06-19.utca.parquet  Lobosphera-N.2025-04-24.0.0.1.utca.parquet  Lobosphera-N.2025-04-24.0.0.2.utca.parquet  Lunaria Rediviva.2024-01-24.0.1.1.utca.parquet  Lunaria Rediviva.2024-01-24.0.1.2.utca.parquet  Lunaria Rediviva.2024-01-24.0.1.3.utca.parquet  Lunaria Rediviva.2024-01-24.0.2.1.utca.parquet  Lunaria Rediviva.2024-01-24.0.2.2.utca.parquet  Lunaria Rediviva.2024-01-24.0.3.1.utca.parquet  Lunaria Rediviva.2024-01-24.0.3.2.utca.parquet  Lunaria Rediviva.2024-01-24.0.3.3.utca.parquet  TEMP.utca.parquet  (+24 more)
_temp/: 0.md  519-N.2025-04-23.0.0.1.utca.ipc  Acer Ginnala.2025-07-08.0.0.2.utca.parquet  Acer Rubrum.2025-07-09.0.0.2.utca.parquet  Acer Spicatum.2025-07-09.0.0.1.utca.parquet  Acer Spicatum.2025-07-09.0.0.3.utca.parquet  Acer Ukurunduense.2025-07-08.0.0.1.utca.parquet  C1210-N.2025-04-24.0.0.1.utca.ipc  C1210-N.2025-04-24.0.0.3.utca.ipc  Commodity.md  Lobosphera-N.2025-04-24.0.0.2.utca.ipc
src/: ipc.rs  json.rs  lib copy.rs  lib.rs  main copy.rs  main.rs  parquet copy 2.rs  parquet copy.rs  parquet.rs
(+67 files in other folders)
