[package]
name = "apache_arrow_utils"
version = "0.1.0"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrow = { version = "55.2.0", features = ["ipc", "prettyprint"] }
fatty_acid_macro = { git = "https://github.com/ippras/fatty_acid_macro" }
lipid = { git = "https://github.com/ippras/lipid", branch = "new" }
metadata = { git = "https://github.com/ippras/metadata", branch = "map" }
parquet = { version = "55.2.0", features = ["arrow", "json"] }
polars = { version = "0.49.1", features = [
    "dtype-full",
    "fmt_no_tty",
    "ipc",
    "json",
    "lazy",
    "parquet",
] }
polars-arrow = { version = "0.49.1" }

# arrow = { git = "https://github.com/apache/arrow-rs", features = [
# parquet = { git = "https://github.com/apache/arrow-rs", features = [
