[package]
name = "apache_arrow_utils"
version = "0.1.0"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow = { version = "56.1.0", features = ["ipc", "prettyprint"] }
fatty_acid_macro = { git = "https://github.com/ippras/fatty_acid_macro" }
lipid = { git = "https://github.com/ippras/lipid" }
maplit = "1.0.2"
metadata = { git = "https://github.com/ippras/metadata", branch = "map" }
parquet = { version = "56.1.0", features = ["arrow", "json"] }
polars = { version = "0.51.0", features = [
    "dtype-full",
    "fmt_no_tty",
    "ipc",
    "json",
    "lazy",
    "parquet",
] }
polars-arrow = { version = "0.51.0" }
walkdir = "2.5.0"

# arrow = { git = "https://github.com/apache/arrow-rs", features = [
# parquet = { git = "https://github.com/apache/arrow-rs", features = [
